--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "cd dist && node index"
+    "start": "cd dist && node index",
+    "watch": "tsc -w",
+    "dev": "cd dist && nodemon index"
   },
   "author": "",
   "license": "ISC",
@@ -16,8 +18,9 @@
     "discord-akairo": "^8.1.0",
     "discord.js": "^12.4.1",
     "mongoose": "^5.10.15",
+    "tsc": "^1.20150623.0",
     "tslib": "^2.0.3",
-    "typescript": "^4.1.2",
+    "typescript": "^4.1.3",
     "util": "^0.12.3",
     "winston": "^3.3.3"
   },
